--- a/admin.html
+++ b/admin.html
@@ -44,7 +44,11 @@
         <div id="dashboard" class="d-none">
             <h1 class="text-center mb-4">Ürünler</h1>
             <div class="mb-3">
-                <input type="text" id="searchInput" class="form-control" placeholder="Ürün ara...">
+                <input type="text" id="searchInput" class="form-control" placeholder="Ürün ismi veya kodu ile ara...">
+            </div>
+            <div class="mb-3">
+                <label for="excelFileInput" class="form-label">Excel Dosyası Yükle (ADI, KODU, FİYAT):</label>
+                <input type="file" id="excelFileInput" accept=".xls,.xlsx" class="form-control">
             </div>
             <div class="table-responsive">
                 <table class="table table-striped" id="productsTable">
@@ -52,6 +56,7 @@
                         <tr>
                             <th>Ürün Resmi</th>
                             <th>Ürün İsmi</th>
+                            <th>Ürün Kodu</th>
                             <th>Fiyat</th>
                             <th>QR Kod</th>
                             <th>İşlemler</th>
@@ -74,6 +79,10 @@
                         <div class="mb-3">
                             <label for="productName" class="form-label">Ürün İsmi:</label>
                             <input type="text" id="productName" class="form-control" placeholder="Ürün İsmi">
+                        </div>
+                        <div class="mb-3">
+                            <label for="productCode" class="form-label">Ürün Kodu:</label>
+                            <input type="text" id="productCode" class="form-control" placeholder="Ürün Kodu">
                         </div>
                         <div class="mb-3">
                             <label for="productPrice" class="form-label">Ürün Fiyatı:</label>
@@ -200,10 +209,10 @@
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-storage-compat.js"></script>
     <!-- QRCode.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+    <!-- XLSX.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
     <!-- Bootstrap JS ve Bağımlılıkları -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-   
 
     <!-- Uygulama JS Dosyası -->
     <script src="app.js"></script>
