--- a/admin.html
+++ b/admin.html
@@ -110,6 +110,34 @@
                         </button>
                         
                     </div>
+
+
+                    <!-- Etiket Önizleme -->
+                   <!-- Etiket Önizleme -->
+                   <div class="label-preview mt-4">
+                    <h3 class="text-center">Etiket Önizleme</h3>
+                    <div id="labelContainer">
+                        <!-- Etiket İçeriği -->
+                        <div id="labelContent">
+                            <div class="label">
+                                <div class="label-top-left">
+                                    <div class="company-name">Tatarlı Seramik</div>
+                                    <div class="product-code">Ürün Kodu: <span id="labelProductCode">12345</span></div>
+                                    <div class="product-name">Adı: <span id="labelProductName">Ürün Adı</span></div>
+                                </div>
+                                <div class="label-bottom-right">
+                                    <div class="qr-border">
+                                        <div id="labelQRCode"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <button id="printLabelBtn" class="btn btn-primary mt-3">Etiketi Yazdır</button>
+                    </div>
+                </div>
+                
+
+
                 </div>
                 <!-- Canlı Önizleme -->
                 <div class="col-md-6">
