--- a/anasayfa.html
+++ b/anasayfa.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Erkaya Yazılım Ofisi - Ürün Yönetim Sistemi</title>
+
+    <link rel="icon" href="erkayalogo.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap CSS ve İkonlar -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
