--- a/admin.html
+++ b/admin.html
@@ -200,6 +200,9 @@
                             <label for="productPrice" class="form-label">Ürün Fiyatı:</label>
                             <input type="text" id="productPrice" class="form-control" placeholder="Ürün Fiyatı">
                         </div>
+
+                        <label for="productLink" class="form-label">Ürün Linki (Opsiyonel):</label>
+    <input type="text" id="productLink" class="form-control" placeholder="Ürün Linki">
                         <div class="mb-3">
                             <label for="productImages" class="form-label">Ürün Resimleri:</label>
                             <input type="file" id="productImages" class="form-control" multiple>
@@ -276,6 +279,7 @@
                                                         </table>
                                                     </div>
                                                     <div class="description mt-3" id="previewProductDescription">Ürün açıklaması burada görünecek.</div>
+                                                    <div class="product-link mt-3" id="previewProductLink"></div>
                                                     <!-- Sosyal Medya Paylaşım Butonları -->
                                                     <div class="social-share text-center mt-4">
                                                         <a href="#"><i class="fab fa-facebook-square"></i></a>
