--- a/admin.html
+++ b/admin.html
@@ -496,7 +496,7 @@
     document.getElementById('labelProductCode').textContent = product.productCode || 'Ürün Kodu';
     
     // Fiyat alanlarını kaldır veya yerine sabit bir mesaj yaz
-    document.getElementById('labelSalePrice').textContent = 'Detaylar için okutunuz';
+    document.getElementById('labelSalePrice').textContent = 'Fiyat bilgisi için okutunuz';
     document.getElementById('labelListPrice').textContent = '';
 
     // QR Kod Oluştur
